<resources>
    <string name="app_name">Movie<b>GO</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //global
    <string name="globalTitle">MovieGO</string>
    <string name="bottomCreateAccText">Don’t have a <font color="#FC094B">MovieGO</font> account? <b>Create Account</b></string>
    <string name="bottomCreatedAccText">Already have a <font color="#FC094B">MovieGO</font> account? <b>Log in</b></string>
    <string name="welcomeSign">Hello, </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome_login">Hello, </string>
    <string name="welcome">Hello</string>
    <string name="toastLoginFailed">Login failed</string>
    <string name="toastLoginSuccess">Login successful</string>

    // For left menu
    <string name="menuLogin">Login</string>
    <string name="menuForm">Form</string>
    <string name="menuSettings">Settings</string>
    <string name="menuUpdate">Check for updates</string>
    <string name="menuVersionApp">ver. 0.1.6.9.69.0.2 Movie Go</string>
    <string name="menuLogout">Log out</string>

    // For bottom menu
    <string name="bottomHome">Home</string>
    <string name="bottomProfile">Profile</string>
    <string name="bottomTickets">Tickets</string>

    // For fragment_profile.xml
    <string name="profileNameTitle">Profile name</string>
    <string name="passTitle">Password</string>
    <string name="nameTitle">Profile</string>
    <string name="surnameTitle">Surname</string>
    <string name="emailTitle">Email</string>
    <string name="phoneTitle">Phone number</string>
    <string name="addressTitle">Home address</string>
    <string name="birthTitle">Birth date</string>

    <string name="editProfileHint">Profile name</string>
    <string name="editPassHint">*******************</string>
    <string name="editNameHint">Name</string>
    <string name="editSurnameHint">Surname</string>
    <string name="editEmailHint">Email address</string>
    <string name="editPhoneHint">Phone number</string>
    <string name="editAddressHint">Home address</string>
    <string name="editBirthHint">Birth date</string>

    <string name="editLoginButtonText">Edit login</string>
    <string name="editPassButtonText">Edit password</string>
    <string name="editProfileButtonText">Edit profile</string>
    <string name="showButtonText">Show</string>
    <string name="logoutButtonText">Logout</string>



    // For fragment_login.xml
    <string name="login_UserTryHint">Username</string>
    <string name="login_PassTryHint">Password</string>
    <string name="login_welcome">Login</string>

    // For fragment_home.xml
    <string name="welcomeSign2">Welcome</string>
    <string name="text1">Please log in</string>
    <string name="emailLoginTryHint">Email address</string>
    <string name="passLoginTryHint">Username</string>
    <string name="forgotPassLink">Forgot password?</string>
    <string name="checkboxText">Stay signed in</string>
    <string name="logButtonText">Log in</string>

    // For fragment_forgotten_pass_first.xml
    <string name="fpFirst_Text1">Forgot your password?</string>
    <string name="fpFirst_Text2">Please type your email address for your MovieGO account. We will send you an confirmation email with a link to set your new password.</string>
    <string name="fpFirst_EmailInputHint">Email address</string>
    <string name="fpFirst_ResetPassButton">Reset password</string>

    // For fragment_forgotten_pass_second.xml
    <string name="fpSec_Text1">Reset your password</string>
    <string name="fpSec_Text2">Enter your new password.</string>
    <string name="fpSec_EmailInputHint">Email address</string>
    <string name="fpSec_PassInputHint">New password</string>
    <string name="fpSec_ConfirmPassInputHint">Confirm new password</string>
    <string name="fpSec_ChangePassButton">Change password</string>

    // For fragment_register.xml
    <string name="reg_Text1">Create your <b><font color="#FC094B">MovieGO</font></b> account</string>
    <string name="reg_LoginInputHint">Login</string>
    <string name="reg_EmailInputHint">Email address</string>
    <string name="reg_PassInputHint">Password</string>
    <string name="reg_ConfirmPassInputHint">Confirm password</string>
    <string name="reg_UsrAgr">I would like to receive newsletters and other promotional information as well giving out my kidney for funding further development of app.</string>
    <string name="reg_CreateAccButton">Sign up</string>
    <string name="reg_CreateAccText">Account created</string>
    <string name="reg_LoginAlready">Login already taken</string>
    <string name="reg_RegFailedText">Registration failed</string>
    <string name="reg_FillFields">Please fill in all fields</string>
    <string name="reg_PassDoNoMatch">Passwords do not match</string>

    // For fragment_form.xml
    <string name="form_Text1">Welcome</string>
    <string name="form_Text2">What’s your issue?</string>
    <string name="form_IssueInputHint">What seems to be an issue? Please describe your problem in detail here.</string>
    <string name="form_NameInputHint">Name</string>
    <string name="form_EmailInputHint">Email Address</string>
    <string name="form_SubjectButton">Send message</string>

    // For fragment_home.xml
    <string name="home_Text1">Want to go see a movie? Get your ticket today</string>
    <string name="home_Text2">13:00</string>
    <string name="home_Text3">16:00</string>
    <string name="home_Text4">19:00</string>
    <string name="no_item_movie">No scheduled screenings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navText">Navigation</string>

    // For fragment_movie_details.xml
    <string name="movie_imageDescription">Image of the current movie</string>
    <string name="movie_averageScore">Average score</string>
    <string name="movie_bookYourSeat">Book your seat</string>
    <string name="movie_type">Dokumentalny</string>
    <string name="movie_duration">123 min</string>
    <string name="movie_score">7.43</string>
    <string name="movie_title">Filip</string>
    <string name="movie_description">The action of the film takes place in 1943. The title character is a cosmopolitan and incapable of deeper feelings seducer. In Poland, he lost his entire family. Alone - being in the heart of Nazi Germany - he hides his Jewish origins and often eludes death.</string>
    <string name="movie_star">star</string>
    <string name="movie_like">like</string>
    <string name="movie_failedBookInformaction">Log in to make a reservation</string>

    //For fragment_ticket
    <string name="ticket_title">Title</string>
    <string name="ticket_reservationNumber">Reservation number:</string>
    <string name="ticket_bookingDateText">Booking date:</string>
    <string name="ticket_seatsText">Seats:</string>
    <string name="ticket_moreInformation">More information</string>
    <string name="ticket_lessInformation">Less information</string>
    <string name="ticket_RN">0014423</string>
    <string name="ticket_date">03.10.2023</string>
    <string name="ticket_seats">2</string>
    <string name="ticket_scrollView">Tickets</string>
    <string name="ticket_yourSpots">Your spots</string>
    <string name="ticket_reservedSpots">Reserved spots:</string>
    <string name="ticket_price">Price:</string>
    <string name="ticket_currency">zł</string>
    <string name="ticket_priceValue">28.99</string>
    <string name="item_no_tickets">No tickets</string>
    <string name="ticket_welcome">Your tickets</string>

    // For fragment_movie_hall.xml
    <string name="movieHall_SelectedText">Selected</string>
    <string name="movieHall_AvailableText">Available</string>
    <string name="movieHall_ReservedText">Reserved</string>
    <string name="movieHall_SelectSpotText">Select your Spot</string>
    <string name="movieHall_PriceText">Ticket price: </string>
    <string name="movieHall_BookButtonText">Book Now</string>
    <string name="movieHall_TicketListText">Choose your ticket</string>
    <string name="EndTransactionText">Seats have been reserved. More details in Tickets</string>
    <string name="FailedTransation">Failed operation</string>
    <string name="movieHall_SelectedSeat">Selected seat: </string>



</resources>