<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHomeDrawer"
            android:icon="@drawable/ic_baseline_home_24dp"
            android:title="@string/bottomHome" />
        <item
            android:id="@+id/navLogin"
            android:icon="@drawable/ic_user"
            android:title="@string/menuLogin" />
        <item
            android:id="@+id/navForm"
            android:icon="@drawable/ic_form_24dp"
            android:title="@string/menuForm" />
        <item
            android:id="@+id/checkUpdates"
            android:icon="@drawable/ic_round_autorenew_24dp"
            android:title="@string/menuUpdate" />

    </group>

    <group
        android:id="@+id/nav_footer">
        <item
            android:id="@+id/nav_log_version"
            app:actionLayout="@layout/footer_navigation_menu"
            tools:ignore="MenuTitle" />
    </group>



</menu>