<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieDetailsFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:contentDescription="@string/movie_imageDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/filip_b1_b_cut_f762836d12_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@android:string/cancel"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_arrow_return_left_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/movie_like"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_cards_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/movieDescription"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:text="@string/movie_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/rate"
        app:layout_constraintStart_toStartOf="@+id/movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/movieType" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/movie_title"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/movie_score"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/movieTitle" />

    <TextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_averageScore"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/rate"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/movie_star"
        android:src="@drawable/ic_star_rate"
        app:layout_constraintEnd_toStartOf="@+id/rate"
        app:layout_constraintTop_toTopOf="@+id/rate" />

    <Button
        android:id="@+id/bookSeat"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/movie_bookYourSeat"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/rate"
        app:layout_constraintStart_toStartOf="@+id/movieTitle"
        app:layout_constraintTop_toBottomOf="@+id/movieTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/movieType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="-30dp"
        android:text="@string/movie_type"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/bookSeat"
        app:layout_constraintTop_toBottomOf="@+id/bookSeat" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-30dp"
        android:text="@string/movie_duration"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/bookSeat"
        app:layout_constraintTop_toTopOf="@+id/movieType" />
</androidx.constraintlayout.widget.ConstraintLayout>