<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_bg"
    tools:context=".ui.login.ForgottenPassSecondFragment">

    <TextView
        android:id="@+id/placeHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpSec_ConfirmPassInput" />

    <EditText
        android:id="@+id/fpSec_PassInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/fpSec_PassInputHint"
        android:inputType="textPersonName"
        android:maxWidth="400dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:radius="5dp"
        android:textColor="@color/grey_text"
        android:textColorHint="@color/grey_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/fpSec_Text2"
        app:layout_constraintStart_toStartOf="@+id/fpSec_Text2"
        app:layout_constraintTop_toBottomOf="@+id/fpSec_Text2" />

    <EditText
        android:id="@+id/fpSec_ConfirmPassInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/fpSec_ConfirmPassInputHint"
        android:inputType="textPersonName"
        android:maxWidth="400dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:radius="5dp"
        android:textColor="@color/grey_text"
        android:textColorHint="@color/grey_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/fpSec_PassInput"
        app:layout_constraintStart_toStartOf="@+id/fpSec_PassInput"
        app:layout_constraintTop_toBottomOf="@+id/fpSec_PassInput" />

    <TextView
        android:id="@+id/fpSec_Text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/fpSec_Text2"
        android:textColor="@color/grey_text"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/placeHolder"
        app:layout_constraintStart_toStartOf="@+id/fpSec_Text1"
        app:layout_constraintTop_toBottomOf="@+id/fpSec_Text1" />

    <TextView
        android:id="@+id/fpSec_Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/fpSec_Text1"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fpSec_ChangePassButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/fpSec_ChangePassButton"
        app:layout_constraintEnd_toEndOf="@+id/placeHolder"
        app:layout_constraintStart_toStartOf="@+id/fpSec_ConfirmPassInput"
        app:layout_constraintTop_toBottomOf="@+id/fpSec_ConfirmPassInput" />

</androidx.constraintlayout.widget.ConstraintLayout>